# wedge

./: Cargo.toml  README.md  build.bat  release.bat  run.bat  rust-toolchain.toml  rustfmt.toml  setup.bat
.cargo/: config
crates/installer/: Cargo.toml  build.rs
crates/installer/src/: ack_dialog.rc  ack_dialog.rs  embed.rc  install_dialog.rc  install_dialog.rs  main.rs
crates/uninstaller/: Cargo.toml  build.rs
crates/uninstaller/src/: main.rs
crates/wedge/: Cargo.toml  build.rs
crates/wedge/src/: main.rs  update.rs  uri.rs
crates/wedge_lib/: Cargo.toml
crates/wedge_lib/src/: browser.rs  build.rs  com.rs  install.rs  lib.rs  win32.rs
resources/: template.manifest  template.rc
