[package]
name = "wedge"
version = "0.1.0"
authors = ["Marc Guiselin <https://github.com/MarcGuiselin>"]
edition = "2018"
description = "Wedge - The simple Open-Source Edge Deflector"
license = "GPL-3.0"
publish = false

[dependencies]
futures = "0.3"
wedge_lib = { path = "../wedge_lib" }
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curl = "0.4"
# ureq = "1.0"
# isahc = "0.9"
# minreq = { version = "2.1", features = ["https"] }
winapi = { version = "0.3.8", features = [
    "winuser", "libloaderapi", "commctrl", "shlobj", "shellapi", "fileapi", "winbase"] }

[build-dependencies]
wedge_lib = { path = "../wedge_lib" }