[package]
name = "wedge_lib"
version = "0.2.0"
authors = ["Marc Guiselin <https://github.com/MarcGuiselin>"]
edition = "2018"
description = "Library for code shared between wedge package"
license = "GPL-3.0"
publish = false

[dependencies]
# For install
widestring = "1.0"
winreg = "0.10"
winapi = { version = "0.3.9", features = [
    "winuser", "libloaderapi", "commctrl", "shlobj", "shellapi", "combaseapi", "objbase", "unknwnbase", "winnt", "shtypes", "fileapi", "processenv", "stringapiset", "ioapiset", "winioctl", "winbase", "securitybaseapi"] }

# For build
handlebars = "4.3"
serde_json = "1.0"
embed-resource = "1.7"
fs_extra = "1.2"
cargo_metadata = "0.15"